--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 clap = { version = "4.3.1", features = ["derive", "wrap_help"] }
 dotenv = { version = "0.15.0", features = ["clap"] }
 reqwest = { version = "0.11.18", features = ["json", "blocking", "gzip", "deflate"] }
+serde = { version = "1.0.163", features = ["derive"] }
